# langchain_basics

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_legacy_chatbot.ipynb  01_pilot.ipynb  02_LCEL_chatbot.ipynb
notebooks/RAG/: 01_download_data.ipynb  02_load_and_prepare_data.ipynb  03_prompting_and_RAG.ipynb  readme.txt
notebooks/jupyter_assistant/: 00_download_data.ipynb
src/: paths.py
