[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Aqib <aqib.a.majid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
openai = "0.27.1"
pandas = "1.5"
typing-extensions = "4.8.0"
langchain = "0.0.300"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
